# rust-email

./: .gitignore  README.md
messaging_server/: Cargo.toml
messaging_server/email/: Cargo.toml
messaging_server/email/src/: lib.rs
messaging_server/email/src/sesv2/: client.rs  email_logger.rs  mod.rs  model.rs  sample_request.json  send_bulk_email.rs
messaging_server/src/: main.rs
