[package]
name = "messaging_server"
version = "0.1.0"
edition = "2021"
authors = ["chan <chan@stclab.com>"]

[dependencies]
actix-web = "4.9.0"
aws-config = "1.5.11"
aws-sdk-sesv2 = "1.58.0"
serde = {version = "1.0.215", features = ["derive"]}
tokio = { version = "1.42.0", features = ["full"] }
email = { path = "../messaging_server/email"}
